# BambooTracker

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  BambooTracker.1  BambooTracker.desktop  BambooTracker.fr.1  CHANGELOG.md  CMakeLists.txt  EFFECTLIST.md  FILEIO.md  IMPORTANT.md  KEYCOMMANDS.md  Project.pro  README.md  README_ja.md  index.html  inst_specs.md  mod_specs.md
BambooTracker/: BambooTracker.pro  CMakeLists.txt  bamboo_tracker.cpp  bamboo_tracker.hpp  bamboo_tracker.qrc  bamboo_tracker_defs.hpp  calc_pitch.cpp  calc_pitch.hpp  channel_attribute.cpp  channel_attribute.hpp  configuration.cpp  configuration.hpp  echo_buffer.hpp  enum_hash.hpp  jam_manager.cpp  jam_manager.hpp  jamming.cpp  jamming.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  misc.hpp  note.cpp  note.hpp  opna_controller.cpp  opna_controller.hpp  opna_defs.hpp  pitch_converter.cpp  pitch_converter.hpp  playback.cpp  playback.hpp  precise_timer.cpp  precise_timer.hpp  song_length_calculator.cpp  song_length_calculator.hpp  tick_counter.cpp  tick_counter.hpp  utils.hpp  vector_2d.hpp  version.hpp
BambooTracker/audio/: audio_stream.cpp  audio_stream.hpp  audio_stream_rtaudio.cpp  audio_stream_rtaudio.hpp  timer.hpp
BambooTracker/audio/RtAudio/: RtAudio.pri
BambooTracker/chip/: 2608_interface.hpp  chip.cpp  chip.hpp  chip_def.h  chip_defs.h  chip_misc.hpp  export_container.cpp  export_container.hpp  opna.cpp  opna.hpp  real_chip_interface.hpp  register_write_logger.cpp  register_write_logger.hpp  resampler.cpp  resampler.hpp
BambooTracker/chip/blip_buf/: blip_buf.c  blip_buf.h  blip_buf.txt  changes.txt  readme.txt
BambooTracker/chip/c86ctl/: c86ctl.h  c86ctl_wrapper.cpp  c86ctl_wrapper.hpp  cbus_boardtype.h
BambooTracker/chip/codec/: ymb_codec.hpp
BambooTracker/chip/mame/: 2608intf.c  emu2149.c  emu2149.h  emutypes.h  fm.c  fm.h  fmopn.c  fmopn.h  mame_2608.cpp  mame_2608.hpp  mamedef.h  mamedefs.h  ymdeltat.c  ymdeltat.h
BambooTracker/chip/nuked/: nuke2608intf.h  nuked_2608.cpp  nuked_2608.hpp  ym3438.c  ym3438.h
BambooTracker/chips/: chip.cpp  chip.hpp  chip_def.h  chip_misc.h  chip_misc.hpp  export_container.cpp  export_container.hpp  opna.cpp  opna.hpp  resampler.cpp  resampler.hpp
BambooTracker/chips/mame/: fm.c  (+8 more)
BambooTracker/command/: abstract_command.hpp  abstruct_command.hpp  command_id.hpp  command_interface.hpp  command_manager.cpp  command_manager.hpp  commands.hpp
BambooTracker/format/: wopn_file.c  wopn_file.h
BambooTracker/gui/: bookmark_manager_form.cpp  bookmark_manager_form.hpp  bookmark_manager_form.ui  color_palette.cpp  color_palette.hpp  color_palette_handler.cpp  color_palette_handler.hpp  command_result_message_box.hpp  comment_edit_dialog.cpp  comment_edit_dialog.hpp  comment_edit_dialog.ui  configuration_dialog.cpp  configuration_dialog.hpp  configuration_dialog.ui  configuration_handler.cpp  configuration_handler.hpp  custom_slider.cpp  custom_slider.hpp  dpi.hpp  drop_detect_list_widget.cpp  drop_detect_list_widget.hpp  effect_description.cpp  effect_description.hpp  effect_list_dialog.cpp  effect_list_dialog.hpp  effect_list_dialog.ui  event_guard.cpp  event_guard.hpp  file_history.cpp  file_history.hpp  file_history_handler.cpp  file_history_handler.hpp  file_io_error_message_box.cpp  file_io_error_message_box.hpp  fm_envelope_set_edit_dialog.cpp  fm_envelope_set_edit_dialog.hpp  fm_envelope_set_edit_dialog.ui  font_info_widget.cpp  font_info_widget.hpp  font_info_widget.ui  (+76 more)
BambooTracker/instrument/: abstract_instrument_property.cpp  abstract_instrument_property.hpp  abstruct_instrument.cpp  abstruct_instrument.hpp  abstruct_instrument_property.cpp  abstruct_instrument_property.hpp  bank.cpp  bank.hpp  command_sequence.cpp  command_sequence.hpp  effect_iterator.cpp  effect_iterator.hpp  envelope_fm.cpp  envelope_fm.hpp  instrument.cpp  instrument.hpp  instrument_fm.cpp  instrument_fm.hpp  instrument_property_defs.hpp  instrument_psg.cpp  instrument_psg.hpp  instruments_manager.cpp  instruments_manager.hpp  lfo_fm.cpp  lfo_fm.hpp  sample_adpcm.cpp  sample_adpcm.hpp  sample_repeat.hpp  sequence_iterator_interface.hpp  sequence_property.cpp  sequence_property.hpp  waveform_adpcm.cpp  waveform_adpcm.hpp
BambooTracker/io/: bank_io.cpp  bank_io.hpp  binary_container.cpp  binary_container.hpp  bt_io_defs.hpp  btb_io.cpp  btb_io.hpp  bti_io.cpp  bti_io.hpp  btm_io.cpp  btm_io.hpp  dat_io.cpp  dat_io.hpp  dmp_io.cpp  dmp_io.hpp  export_handler.cpp  export_handler.hpp  export_io.cpp  export_io.hpp  ff_io.cpp  ff_io.hpp  file_io.cpp  file_io.hpp  file_io_error.cpp  file_io_error.hpp  gd3_tag.hpp  ins_io.cpp  ins_io.hpp  instrument_io.cpp  instrument_io.hpp  io_file_type.hpp  io_handlers.hpp  io_utils.cpp  io_utils.hpp  module_io.cpp  module_io.hpp  opni_io.cpp  opni_io.hpp  p86_io.cpp  p86_io.hpp  (+23 more)
BambooTracker/lang/: CMakeLists.txt  bamboo_tracker_es.ts  bamboo_tracker_fr.ts  bamboo_tracker_ja.ts  bamboo_tracker_pl.ts  lang.pri
BambooTracker/midi/: midi.cpp  midi.hpp  midi_def.h
BambooTracker/module/: effect.cpp  effect.hpp  groove.cpp  groove.hpp  module.cpp  module.hpp  pattern.cpp  pattern.hpp  song.cpp  song.hpp  step.cpp  step.hpp  track.cpp  track.hpp
BambooTracker/stream/: audio_stream.cpp  audio_stream.hpp  audio_stream_mixier.cpp  audio_stream_mixier.hpp  audio_stream_rtaudio.cpp  audio_stream_rtaudio.hpp  timer.cpp  timer.hpp
data/: CMakeLists.txt  data.pri  data.pro
data/applications/: BambooTracker.desktop
data/demos/: demos.md
data/lang/: bamboo_tracker_fr.ts  bamboo_tracker_ja.ts  bamboo_tracker_pl.ts
data/resources/: resources.pri
data/skins/: Cream.ini  Default-Blue.ini  Default.ini  skins.md
data/specs/: bank_specs_v1.2.0.md  bank_specs_v1.3.0.md  bank_specs_v1.3.1.md  inst_specs_v1.4.0.md  inst_specs_v1.5.0.md  inst_specs_v1.5.1.md  mod_specs_v1.5.0.md  mod_specs_v1.6.0.md  mod_specs_v1.6.1.md  speclist.txt
submodules/: CMakeLists.txt
submodules/RtAudio/: CMakeLists.txt  RtAudio.pro
submodules/RtMidi/: CMakeLists.txt  RtMidi.pro
submodules/common/: library.pri
submodules/emu2149/: CMakeLists.txt  emu2149.pro
(+456 files in other folders)
